--- a/package.json
+++ b/package.json
@@ -19,11 +19,13 @@
         "@babel/polyfill": "^7.2.5",
         "@babel/preset-env": "^7.3.1",
         "@babel/preset-react": "^7.0.0",
+        "@material-ui/core": "^3.9.2",
         "babel-loader": "^8.0.5",
         "cordova-android": "^7.1.4",
         "cordova-browser": "^5.0.4",
         "cordova-plugin-whitelist": "^1.3.3",
         "react": "^16.7.0",
+        "react-autosuggest": "^9.4.3",
         "react-dom": "^16.7.0"
     },
     "cordova": {
