--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
         "cordova-android": "^7.1.4",
         "cordova-browser": "^5.0.4",
         "cordova-plugin-whitelist": "^1.3.3",
+        "lodash": "^4.17.11",
+        "moment": "^2.24.0",
         "react": "^16.7.0",
         "react-autosuggest": "^9.4.3",
         "react-dom": "^16.7.0"
