--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
         "cordova-android": "^7.1.4",
         "cordova-browser": "^5.0.4",
         "cordova-plugin-whitelist": "^1.3.3",
+        "localforage": "^1.7.3",
         "lodash": "^4.17.11",
         "moment": "^2.24.0",
         "react": "^16.7.0",
