--- a/package.json
+++ b/package.json
@@ -28,9 +28,11 @@
         "localforage": "^1.7.3",
         "lodash": "^4.17.11",
         "moment": "^2.24.0",
+        "prop-types": "^15.7.2",
         "react": "^16.7.0",
         "react-autosuggest": "^9.4.3",
-        "react-dom": "^16.7.0"
+        "react-dom": "^16.7.0",
+        "react-router-dom": "^4.3.1"
     },
     "cordova": {
         "plugins": {
